--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-i18next": "^16.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
