--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.5",
+    "react-use": "^17.6.0",
+    "yup": "^1.7.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
